force-app/main/default/objects/customer__c/customer__c.object-meta.xml
<CustomObject>
    <label>customer</label>
    <nameField>
        <displayFormat>CAID-{000000}</displayFormat>
        <label>customer  id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>