force-app/main/default/objects/customer__c/fields/car__c.field-meta.xml
<CustomField>
    <fullName>car__c</fullName>
    <label>car loan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>