force-app/main/default/objects/customer__c/fields/dob__c.field-meta.xml
<CustomField>
    <fullName>dob__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>dob</label>
    <type>Date</type>
</CustomField>