force-app/main/default/objects/customer__c/fields/first_name__c.field-meta.xml
<CustomField>
    <fullName>first_name__c</fullName>
    <label>first name</label>
    <type>TextArea</type>
</CustomField>