force-app/main/default/objects/customer__c/fields/home_load__c.field-meta.xml
<CustomField>
    <fullName>home_load__c</fullName>
    <label>home load</label>
    <length>255</length>
    <type>Text</type>
</CustomField>