force-app/main/default/objects/customer__c/fields/last__c.field-meta.xml
<CustomField>
    <fullName>last__c</fullName>
    <label>last name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>