force-app/main/default/objects/customer__c/fields/Total_amount__c.field-meta.xml
<CustomField>
    <fullName>Total_amount__c</fullName>
    <label>TotalBalance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>