force-app/main/default/objects/customer__c/recordTypes/car_loan_loan.recordType-meta.xml
<RecordType>
    <fullName>car_loan_loan</fullName>
    <active>true</active>
    <label>car loan loan</label>
</RecordType>