force-app/main/default/objects/customer__c/recordTypes/hom_loan.recordType-meta.xml
<RecordType>
    <fullName>hom_loan</fullName>
    <active>true</active>
    <label>hom loan</label>
</RecordType>